# x-inf3a

./: ProjectHome.md
CMU/: README.odt  extract_eye_positions.sh  fixation2.sh  generate_optical_flow.sh  removeSaccades.sh  run_segment.py  run_segment.sh  segment  segmentShonaBuyukada.sh
CMU/capture/: CMakeLists.txt  fhead.cpp  fhead.h  main.cpp  main2.cpp  v4l2uvc.c  v4l2uvc.h
CMU/fixationSegment/: CMakeLists.txt  segment.cpp  segmentationLayer.cpp  segmentationLayer.h
CMU/fixationSegment/damascene/: CMakeLists.txt  damascene.h
CMU/fixationSegment/damascene/include/: ._Stencil.h  ._combine.h  ._convert.h  ._filters.h  ._globalPb.h  ._intervening.h  ._kmeans.h  ._lanczos.h  ._localcues.h  ._nonmax.h  ._skeleton.h  ._spectralPb.h  ._stencilMVM.h  ._texton.h  nonmax.h
CMU/fixationSegment/damascene/src/: damascene.cu  gradient.cu  localcues.cu  nonmax.cu
CMU/fixationSegment/edgeDetection/: pbBG.cpp  pbCGTG.cpp  savgol.cpp  savgol.h  textureGradient.cpp  textureGradient.h
CMU/fixationSegment/misc/: misc.cpp
CMU/fixationSegment/pbBoundary/: pbBoundary.cpp
CMU/flow/: generate_optical_flow.m  write_flow.m
CMU/flow/brox/: computePsidashFS_brox.m  constructMatrix_brox.m  gaussDeriv.m  gaussianRescaling.m  gaussianSmooth.m  imgGrad.m  mywarp_rgb.m  optic_flow_brox.asv  optic_flow_brox.m  psiDerivative.m  resolutionProcess_brox.m
CMU/flow/sand/: channels_new.m  computePsidashFS_sand.m  constructMatrix_sand.m  gaussDeriv.m  gaussianRescaling.m  gaussianSmooth.m  getalphaImg.m  optic_flow_sand.m  psiDerivative.m  resolutionProcess_sand.m
CMU/opticalFlow/: CMakeLists.txt  fhead.h  main.cpp  main2.cpp
CMU/segmentation/: cluster_segs.m  drawCross.m  exportVideo.m  exportVideoFixations.m  fixation.m  fixation2.m  imposeLine.m  imposelabel.m  mergeSegments.m  multi_segment.m  new_segment.m  preprocessRegion.m  read_log_file.m  removeSaccades.m  renderSegment.m  run_segment.m  seg.m  segOnboarderRatio.m  segment  segmentClustering.m  segmentSelection.m  segmentTest
CMU/segmentation/activeSegCode_Jan21_2011/: Makefile  README.txt  example3.cpp  opticalFlow.cpp  segment.cpp  segmentationLayer.cpp  test.cpp
CMU/segmentation/fixationSegment/: CmdLine.cpp  IMG_0223.flo  Makefile  example1.cpp  example2.cpp  segment.cpp  segmentationLayer.cpp  segmentationLayer.h
CMU/tracking/: CMakeLists.txt  fhead.cpp  main2.cpp  test.cpp  trackingFixations.cpp  trackingGaze.cpp
INF552/Projet/: CMakeLists.txt  Hough.cpp  Hough.h  main.cpp
INF552/ex1/: epipolaires.cpp
INF552/ex2/: .cproject  .project  CMakeLists.txt  epipolaires.cpp
INF552/ex3/: .cproject  .project  CMakeLists.txt  SIFT.cpp  estimation.cpp
INF552/ex3/Imagine/: Features.h  Optim.h
INF552/ex3/Imagine/Features/: IO.h  Match.h
INF552/ex3/Imagine/Optim/: Ransac.h
INF552/ex3/vl/: mathop.c  readme.txt
INF555/TD1/: AreaFloodFilling.java  TestUnionFind.java  anumeroter.ppm  result.ppm
INF555/TD2/: imgflip.ppm  polytechnique2.ppm
INF555/TD2/src/: HarrisStephen.java  Image.java  Mask.java  PPM.java  ShowImageSample.java  Test.java
INF555/TD3/: .classpath
INF555/TD3/src/: BilateralFiltering.java  BilateralFilteringApplet.java  ICPApplet.java  myApplet.java
INF555/TD4/: .classpath
INF555/TD4/src/: Homographie.java  ImageViewer.java  ViewerClicker.java
INF555/TD5/: .classpath
INF555/TD5/src/: PointsDrawer.java  kMeans.java
INF555/TD6/src/: BallTree.java  ElfrosLeung.java
INF557/TD1/src/: Election.java  PhysicalLayer.java  SNACASD.java  Test.java  Test2.java  Test3.java  User.java
INF557/TD3/: file
INF557/TD3/src/: BasicMain.java  Listen.java
INF558/TD2/src/: ArbreHuffman.java  Coder.java  Decoder.java  Dico.java  Feuille.java  Noeud.java  Source.java  Source_fr.java  Test.java
INF558/TD3/: extrait.txt
INF558/TD3/src/: Arith.java  Source.java
INF558/TD4/src/: Codage.java
INF558/TD5/src/: Arbre.java  Codage.java  Mot.java
INF570/TD1/src/: Client.java  Server.java
INF570/TD2/src/: Capsule.java  Connexion.java  Main.java  Message.java  MessagePING.java  MessagePONG.java  MessageQUERY.java  MessageREPLY.java  Type.java
Projet/INF560/CMakeModules/: FindCUDA.cmake
Projet/INF560/src/: CMakeLists.txt  calculus.cpp  calculus.cu  common.cu  common.h  extrema.cpp  gaussian.cpp  gaussian.cu  integral.cpp  integral.cu  main.cpp  matrix.cu  surf.h  surfCUDA.h
Projet/INF562/: chair.off  chair.xyz  cow.off  delaunay.off  horse.off  pig.off  pig.xyz  plot_gaussian.plt  plot_taubin.plt  recons.off  skull.off  sphere.off  tanglecube.off  tanglecube.xyz  tanglecube_fin.off  torus.off  torus2.off  torus3.off  torus4.off  torus5.off
Projet/INF562/Rapport/: Benoit.tex  exampleProject.aux  exampleProject.bbl  exampleProject.bib  exampleProject.blg  exampleProject.dvi  exampleProject.tex  julien.txt  taubin.docx
Projet/INF562/src/: A_UTILISER.java  Courbure.java  CourbureEstimator.java  GaussianCourbureEstimator.java  Masque.java  Matching.java  PolyhedronBoxTree.java  RigidTransform.java  Taubin.java  TenseurCourbure.java  TransformEvaluator.java  TrouveMeilleureTransformation.java  Utils.java
Projet/INF570/src/: Connexion.java  ConnexionManager.java  Keyboard.java  Main.java  Message.java  MessageHeader.java  coucou.txt  coucoug.txt
Projet/INF584/: couleur.ppm  couleur2.ppm  damier.ppm  relief.ppm  relief2.ppm
Projet/INF584/src/: Header1.h  Vec3D.h  image.cpp  image.h  interaction.h  lighting.cpp  lighting.h  loadppm.cpp  loadppm.h  main.cpp  mesh.cpp  (+3 more)
(+92 files in other folders)
