PROJECT(Capture)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_BUILD_TYPE Debug)
FIND_PACKAGE( OpenCV REQUIRED )


ADD_EXECUTABLE(Capture fhead.cpp main.cpp v4l2uvc.c)
TARGET_LINK_LIBRARIES(Capture ${OpenCV_LIBS})

ADD_EXECUTABLE(PostProcess fhead.cpp main2.cpp)
TARGET_LINK_LIBRARIES(PostProcess ${OpenCV_LIBS})
