PROJECT( INF560 )
cmake_minimum_required(VERSION 2.6)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../CMakeModules")
FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE(CUDA REQUIRED)
INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CUDA_TOOLKIT_INCLUDE}
${CUDA_CUT_INCLUDE_DIR}
${OpenCV_INCLUDE_DIR}
${CUDA_INCLUDE_DIRS}
)

CUDA_INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CUDA_TOOLKIT_INCLUDE}
${CUDA_CUT_INCLUDE_DIR}
${OpenCV_INCLUDE_DIR}
${CUDA_INCLUDE_DIRS}
)
CUDA_ADD_EXECUTABLE( Projet integral.cu gaussian.cu main.cpp integral.cpp gaussian.cpp)
TARGET_LINK_LIBRARIES( Projet ${OpenCV_LIBS} ${CUDA_LIBRARIES} )
